--- a/HiChongSwift/AboutMeFooter.xib
+++ b/HiChongSwift/AboutMeFooter.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -16,9 +16,9 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rsp-ei-xl2">
-                    <rect key="frame" x="8" y="280" width="584" height="40"/>
+                    <rect key="frame" x="8" y="278" width="584" height="45"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="40" id="orS-9p-UEd"/>
+                        <constraint firstAttribute="height" constant="45" id="orS-9p-UEd"/>
                     </constraints>
                     <state key="normal" image="AddPetButton">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -37,6 +37,6 @@
         </view>
     </objects>
     <resources>
-        <image name="AddPetButton" width="72" height="30"/>
+        <image name="AddPetButton" width="115" height="30"/>
     </resources>
 </document>
