--- a/HiChongSwift/Find.storyboard
+++ b/HiChongSwift/Find.storyboard
@@ -915,7 +915,7 @@ So as I pray, Unlimited Blade Works.</string>
                                     <outletCollection property="smallImages" destination="dIB-Y7-Urg" collectionClass="NSMutableArray" id="Dh4-5n-d4d"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FindTwitterCommentCellIdentifier" id="O7Q-fO-rhX" customClass="FindTwitterCommentCell" customModule="HiChongSwift" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindTwitterCommentCellIdentifier" id="O7Q-fO-rhX" customClass="FindTwitterCommentCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O7Q-fO-rhX" id="8QM-v4-mkd">
@@ -954,14 +954,14 @@ So as I pray, Unlimited Blade Works.</string>
                                     <outlet property="icyTextField" destination="TUt-Fw-btI" id="Nwr-vn-eDF"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FindTwitterCommentListCellIdentifier" id="Lmp-zF-Bnf" customClass="FindTwitterCommentListCell" customModule="HiChongSwift" customModuleProvider="target">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="FindTwitterCommentListCellIdentifier" id="Lmp-zF-Bnf" customClass="FindTwitterCommentListCell" customModule="HiChongSwift" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Lmp-zF-Bnf" id="oih-px-Nka">
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uhm-ZE-3bx">
-                                            <rect key="frame" x="8" y="8" width="584" height="14.5"/>
+                                            <rect key="frame" x="8" y="8" width="584" height="15"/>
                                             <attributedString key="attributedText">
                                                 <fragment content="Label">
                                                     <attributes>
